Add string read, write native implementation